# mver

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sepcs.md  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
ci/: index.html
command-resolution/: index.html
commands/app/: index.html
commands/config/: index.html
commands/group/: index.html
commands/model/: index.html
commands/pull-push/: index.html
commands/utility/: index.html
concepts/: index.html
docs/: api.md  ci.md  command-resolution.md  concepts.md  file-structure.md  index.md  installation.md  tokens.md  workflow.md
docs/commands/: app.md  config.md  group.md  model.md  pull-push.md  utility.md
example/: models.registry.yml  mver.config.yml
example/.resver/: registry.yml
example/apps/fraud-service/: main.py
example/apps/risk-scorer/: main.py
file-structure/: index.html
installation/: index.html
search/: search_index.json
src/mgm/: cli.py  config.py  executor.py  registry.py  schema.py  semver_util.py
src/mgm/commands/: app_cmd.py  group.py  model.py  version.py
src/mver/: __init__.py  api.py  cli.py  config.py  executor.py  registry.py
src/mver/commands/: app_cmd.py  group.py  model.py  version.py
src/resver/: __init__.py  api.py  cli.py  config.py  executor.py  registry.py  schema.py
tests/: conftest.py  test_api.py  test_app.py  test_config.py  test_diff.py  test_group.py  test_model.py  test_pull_push.py  test_registry.py  test_validate.py  test_version.py
tokens/: index.html
workflow/: index.html
(+6 files in other folders)
