[project]
name = "mver"
version = "0.1.0"
description = "Model Group Manager — CLI lock-file registry for ML model versions"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "ruamel-yaml>=0.18",
    "semver>=3.0",
]

[project.scripts]
mver = "mver.cli:app"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.5",
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mver"]
